# AIAgentBuilder

./: Makefile  README.md  package.json  setup.sh  start_simple.sh
backend/: .env  Dockerfile  README.md  langflow.db  pyproject.toml  requirements.txt  simple_server.py
backend/app/: main.py
backend/app/api/: auth.py  components.py  flows.py  projects.py  variables.py  websocket.py
backend/app/components/: base.py  registry.py
backend/app/components/agents/: __init__.py  react_agent.py
backend/app/components/data/: __init__.py  csv_loader.py  json_loader.py
backend/app/components/inputs/: chat_input.py  text_input.py
backend/app/components/llms/: __init__.py  anthropic.py  openai.py
backend/app/components/logic/: __init__.py  conditional.py  loop.py
backend/app/components/outputs/: __init__.py  text_output.py
backend/app/components/processing/: __init__.py  text_splitter.py
backend/app/components/prompts/: __init__.py  prompt_template.py
backend/app/components/tools/: __init__.py  web_search.py
backend/app/components/vectorstores/: __init__.py  chromadb.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/flows/: executor.py  graph.py
backend/app/models/: __init__.py  models.py  variable.py
backend/app/schemas/: auth.py  flow.py
docker/: docker-compose.yml
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ComponentCard.tsx  ConfigPanel.tsx  CustomNode.tsx  LangFlowNode.tsx  Navbar.tsx  Sidebar.tsx  VariablesPanel.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: componentLibrary.ts
(+10 files in other folders)
